Fix [Monitor Applications] Y-axis label is truncated

--- a/src/components/MonitoringApplicationsPage/monitoringApplicationsPage.scss
+++ b/src/components/MonitoringApplicationsPage/monitoringApplicationsPage.scss
@@ -95,6 +95,7 @@ $applicationRowHeightExtended: variables.$rowHeightExtended;
             left: 50%;
             font-weight: 500;
             font-size: 13px;
+            transform: translate(-50%, 0);
           }
 
           &.loading {
